--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-python-telegram-bot>=13.0
-google-generativeai>=0.1.0
-python-dotenv>=0.19.0
-requests>=2.26.0
-Flask>=2.0.0
-gunicorn>=20.1.0
+telebot==0.0.5
+python-telegram-bot==13.7
+google-genai==1.11.0
+flask==2.0.1
+gunicorn==20.1.0
